--- a/views/_partials/footer.hbs
+++ b/views/_partials/footer.hbs
@@ -18,13 +18,13 @@
                         <nav class="footer-widget-nav">
                             <ul>
                                 <li><a href="#"><i class="fa fa-angle-double-right mb-2" aria-hidden="true"></i> Bùi Hồng Ân</a></li>
-                                <li><a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i> 1760253</a></li>
+                                <li><a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i> 20424001</a></li>
                                 <li><a href="#"><i class="fa fa-angle-double-right mb-2 " aria-hidden="true"></i>Phan Vũ Thanh Đạo</a></li>
-                                <li><a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>1760278</a></li>
-                                <li><a href="#"><i class="fa fa-angle-double-right mb-2 " aria-hidden="true"></i>Hồ Thảo Diệu</a></li>
-                                <li><a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>1760281</a></li>
+                                <li><a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>20424011</a></li>
+                                <li><a href="#"><i class="fa fa-angle-double-right mb-2 " aria-hidden="true"></i>Nguyễn Thế Đạo</a></li>
+                                <li><a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>20424010</a></li>
                                 <li><a href="#"><i class="fa fa-angle-double-right mb-2 " aria-hidden="true"></i>Phạm Thị Ngọc Hạnh</a></li>
-                                <li><a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>1760302</a></li>
+                                <li><a href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i>20424026</a></li>
                                 </ul>
                         </nav>
                     </div>
@@ -42,12 +42,12 @@
 
                              <div class="d-flex" >
                             <i class="fa fa-facebook" style="color: white; margin-right: 9px; padding: .5em;
-    display: inline-block;"></i><p style="color: white;">Nhóm chúng em.facebook.com</p>
+    display: inline-block;"></i><p style="color: white;">None</p>
                              </div>
 
                               <div class="d-flex" >
                             <i class="fa fa-google" style="color: white; margin-right: 9px; padding: .5em;
-    display: inline-block;"></i><p style="color: white;">NhomChungEm.com</p>
+    display: inline-block;"></i><p style="color: white;">None</p>
                              </div>
                              
       
